--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <script type="text/javascript" src="/resources/lighting/js/memenu.js"></script>
-    <link href="/resources/lighting/css/memenu.css" rel="stylesheet" type="text/css" media="all" />
+    <script type="text/javascript" src="https://darkbisop.github.io/WebMarket/js/memenu.js"></script>
+    <link href="https://darkbisop.github.io/WebMarket/css/memenu.css" rel="stylesheet" type="text/css" media="all" />
 </head>
 <body>
 <ul class="memenu skyblue"><li class="active"><a href="/index">Home</a></li>
@@ -290,7 +290,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="container">
     <div class="items-sec">
         <div class="col-md-3 feature-grid">
-            <a href="/shop/view?n=14"><img src="/resources/lighting/images/img1.jpg" alt="" width="500" height="200"/>
+            <a href="/shop/view?n=14"><img src="https://darkbisop.github.io/WebMarket/images/img1.jpg" alt="" width="500" height="200"/>
                 <div class="arrival-info">
                     <h4>초코초코 케이크</h4>
                     <p>19,000원</p>
@@ -303,7 +303,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
         </div>
         <div class="col-md-3 feature-grid">
-            <a href="/shop/view?n=15"><img src="/resources/lighting/images/img2.jpg" alt="" width="500" height="200"/>
+            <a href="/shop/view?n=15"><img src="https://darkbisop.github.io/WebMarket/images/img2.jpg" alt="" width="500" height="200"/>
                 <div class="arrival-info">
                     <h4>스트로베리 케이크</h4>
                     <p>18,000원</p>
@@ -316,7 +316,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
         </div>
         <div class="col-md-3 feature-grid">
-            <a href="/shop/view?n=16"><img src="/resources/lighting/images/img3.jpg" width="500" height="200" alt=""/>
+            <a href="/shop/view?n=16"><img src="https://darkbisop.github.io/WebMarket/images/img3.jpg" width="500" height="200" alt=""/>
                 <div class="arrival-info">
                     <h4>딸기 믹스 케이크</h4>
                     <p>20,000원</p>
@@ -329,7 +329,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
         </div>
         <div class="col-md-3 feature-grid">
-            <a href="/shop/view?n=19"><img src="/resources/lighting/images/img6.jpg" width="500" height="200" alt=""/>
+            <a href="/shop/view?n=19"><img src="https://darkbisop.github.io/WebMarket/images/img6.jpg" width="500" height="200" alt=""/>
                 <div class="arrival-info">
                     <h4>풍미가득 딸기 케이크</h4>
                     <p>16,000원</p>
@@ -345,7 +345,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     </div>
     <div class="items-sec btm-sec">
         <div class="col-md-3 feature-grid">
-            <a href="/shop/view?n=18"><img src="/resources/lighting/images/img5.jpg" width="500" height="200" alt=""/>
+            <a href="/shop/view?n=18"><img src="https://darkbisop.github.io/WebMarket/images/img5.jpg" width="500" height="200" alt=""/>
                 <div class="arrival-info">
                     <h4>허늬 피넛 머핀</h4>
                     <p>3,000원</p>
@@ -358,7 +358,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
         </div>
         <div class="col-md-3 feature-grid">
-            <a href="/shop/view?n=21"><img src="/resources/lighting/images/img8.jpg" width="500" height="200" alt=""/>
+            <a href="/shop/view?n=21"><img src="https://darkbisop.github.io/WebMarket/images/img8.jpg" width="500" height="200" alt=""/>
                 <div class="arrival-info">
                     <h4>초코 듬뿍 브레드</h4>
                     <p>7,000원</p>
@@ -371,7 +371,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
         </div>
         <div class="col-md-3 feature-grid">
-            <a href="/shop/view?n=20"><img src="/resources/lighting/images/img7.jpg" width="500" height="200" alt=""/>
+            <a href="/shop/view?n=20"><img src="https://darkbisop.github.io/WebMarket/images/img7.jpg" width="500" height="200" alt=""/>
                 <div class="arrival-info">
                     <h4>초코 박살 브레드</h4>
                     <p>7,000원</p>
@@ -384,7 +384,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             </a>
         </div>
         <div class="col-md-3 feature-grid">
-            <a href="/shop/view?n=17"><img src="/resources/lighting/images/img4.jpg" width="500" height="200" alt=""/>
+            <a href="/shop/view?n=17"><img src="https://darkbisop.github.io/WebMarket/images/img4.jpg" width="500" height="200" alt=""/>
                 <div class="arrival-info">
                     <h4>초코 듬뿍 머핀</h4>
                     <p>3,000원</p>
@@ -417,7 +417,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="col-md-6 grid-left">
             <a href="/shop/view?n=10"><div class="offer-grid1">
                 <div class="ofr-pic">
-                    <img src="/resources/lighting/images/ofr2.png" alt="" width="200" height="200" />
+                    <img src="https://darkbisop.github.io/WebMarket/images/ofr2.png" alt="" width="200" height="200" />
                 </div>
                 <div class="ofr-pic-info">
                     <h4>Emergency Lights <br>& Led Bulds</h4>
@@ -436,7 +436,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <p>Shop Now</p>
                 </div>
                 <div class="ofr-pic2">
-                    <img src="/resources/lighting/images/ofr3.png" width="250" height="180" alt=""/>
+                    <img src="https://darkbisop.github.io/WebMarket/images/ofr3.png" width="250" height="180" alt=""/>
                 </div>
                 <div class="clearfix"></div>
             </div></a>
