--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="header-top">
     <div class="header-bottom">
         <div class="logo">
-            <h1><a href="https://darkbisop.github.io/WebMarket/index">Lighting</a></h1>
+            <h1><a href="https://darkbisop.github.io/WebMarket/">Lighting</a></h1>
         </div>
         <!---->
         <div class="top-nav">
