--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!--theme style-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Lighting A Ecommerce Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
-    <link href="/resources/lighting/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://darkbisop.github.io/WebMarket/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Custom Theme files -->
 
-    <link href="/resources/lighting/css/style.css" rel="stylesheet" type="text/css" media="all" />
-    <script src="/resources/lighting/js/jquery.min.js"></script>
+    <link href="https://darkbisop.github.io/WebMarket/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <script src="https://darkbisop.github.io/WebMarket/js/jquery.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -24,9 +24,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
     <!-- start menu -->
-    <script src="/resources/lighting/js/simpleCart.min.js"> </script>
-    <link href="/resources/lighting/css/memenu.css" rel="stylesheet" type="text/css" media="all" />
-    <script type="text/javascript" src="/resources/lighting/js/memenu.js"></script>
+    <script src="https://darkbisop.github.io/WebMarket/js/simpleCart.min.js"> </script>
+    <link href="https://darkbisop.github.io/WebMarket/css/memenu.css" rel="stylesheet" type="text/css" media="all" />
+    <script type="text/javascript" src="https://darkbisop.github.io/WebMarket/js/memenu.js"></script>
     <script>$(document).ready(function(){$(".memenu").memenu();});</script>
     <!-- /start menu -->
 </head>
