--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <a href="https://darkbisop.github.io/WebMarket/shop/cartList">
     <!-- 로그인 하지 않았을때 -->
     
-        <div class="login_button"><a href="https://darkbisop.github.io/WebMarket/member/login">Login</a></div>
-        <span><a href="https://darkbisop.github.io/WebMarket/member/signUp">SignUp</a></span>
+        <div class="login_button"><a href="/member/login">Login</a></div>
+        <span><a href="/member/signUp">SignUp</a></span>
     
 
     <!-- 로그인 했을때 -->
