--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- 로그인 하지 않았을때 -->
     
         <div class="login_button"><a href="https://darkbisop.github.io/WebMarket/login">Login</a></div>
-        <span><a href="/member/signUp">SignUp</a></span>
+        <span><a href="https://darkbisop.github.io/WebMarket/signup">SignUp</a></span>
     
 
     <!-- 로그인 했을때 -->
